# orderflow

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  package.json  run_orchestration.py  vercel.json
app/backend/: .env.example  .flake8  README.md  alembic.ini  pyproject.toml  test_intelligence.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20260423_01_t11_a006_core_schema_v1.py  20260423_02_t11_a009_workflow_runs.py  20260424_01_t11_phase1_multilingual_support.py  20260424_02_t11_page_summaries.py  20260424_03_t11_page_annotations.py  20260430_01_t11_obligation_embeddings.py  20260502_01_t11_auth_users.py  20260502_02_case_advocates.py  20260502_03_case_flow.py  20260503_01_case_incidence_places.py  20260504_01_t12_intake_flow.py  20260505_01_page_summary_rich_extraction.py  20260505_01_rich_extract.py  20260506_01_ocr_metadata.py  20260507_01_document_text_boxes.py  20260507_02_invalidate_summary_v1_0.py
app/backend/scripts/: backfill_embeddings.py  backfill_extracted_places.py  list_resolvable_case_ids.py  seed_demo_advocates.py  seed_evaluator.py  simulate_ccms_event.py
app/backend/src/orderflow_api/: __init__.py  main.py
app/backend/src/orderflow_api/api/: ai_extraction.py  document_persistence.py  document_summary_persistence.py  document_text_box_persistence.py  document_text_geometry.py  extraction_engine.py  extraction_job_persistence.py  extraction_persistence.py  geocode_cache_persistence.py  geocoding_service.py  indian_ecourts_lookup.py  intake_adapter.py  intake_orchestrator.py  map_renderer.py  ocr_service.py  page_annotation_persistence.py  page_summary_engine.py  page_summary_persistence.py  response.py  router.py  stub_repository.py  user_persistence.py  (+2 more)
app/backend/tests/: conftest.py  test_ai_extraction.py  test_api_contracts.py  test_case_intake_schema_contracts.py  test_contempt_risk.py  test_document_text_box_persistence.py  test_exports_case_bundle.py  test_extraction_engine.py  test_extraction_job_persistence_audit.py  test_extraction_persistence.py  test_geocoding_service.py  test_indian_ecourts_lookup.py  test_intake_orchestrator.py  test_language_detection.py  test_map_renderer.py  test_ocr_service_quality.py  test_page_summaries_places_api.py  test_page_summary_engine_cache.py  test_page_summary_engine_places.py  test_page_summary_persistence_places.py  test_persistence_cache_paths.py  test_proof_verifier.py  test_quality_placeholder.py  test_redaction_service.py  test_routing_service.py  test_telemetry_attributes.py  test_translation_service.py
app/backend/tests/api/: test_advocates_routes.py  test_auth_routes.py  test_feature_flag.py  test_public_obligations.py
app/backend/tests/core/: test_auth_permissions.py  test_hash_utils.py
app/intelligence/: .env.example  README.md  pyproject.toml
app/intelligence/src/orderflow_intelligence/: __init__.py  main.py
app/intelligence/tests/: test_intake_graph.py
app/worker/: .env.example  README.md  pyproject.toml
app/worker/src/orderflow_worker/: __init__.py  main.py
app/worker/tests/: conftest.py  test_intake_activity_smokes.py
(+203 files in other folders)
