[project]
name = "orderflow-backend"
version = "0.1.0"
description = "OrderFlow Theme 11 backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "minio>=7.2.8,<8.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "temporalio>=1.9.0,<2.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "alembic>=1.13.3,<2.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "opentelemetry-api>=1.28.2,<2.0.0",
  "opentelemetry-sdk>=1.28.2,<2.0.0",
  "opentelemetry-exporter-otlp>=1.28.2,<2.0.0",
  "langdetect>=1.0.9,<2.0.0",
  "aiohttp>=3.9.0,<4.0.0",
  "tenacity>=8.2.0,<9.0.0",
  "groq>=0.11.0,<1.0.0",
  "sentence-transformers>=3.0.0,<5.0.0",
  "pgvector>=0.3.0,<1.0.0",
  "pyjwt[crypto]>=2.8.0,<3.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "email-validator>=2.1.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "black>=24.8.0,<25.0.0",
  "flake8>=7.1.0,<8.0.0",
  "pre-commit>=3.8.0,<4.0.0"
]
pdf = [
  "docling>=2.0.0,<3.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "staticmap==0.5.7",
  "weasyprint>=62.0,<67.0"
]
ocr = [
  "pypdfium2>=5.7.0,<6.0.0",
  "pillow>=10.0.0,<12.0.0",
  "paddleocr>=3.1.0,<4.0.0",
  "paddlepaddle>=3.0.0,<4.0.0"
]

[project.scripts]
orderflow-api = "orderflow_api.main:run"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
