[project]
name = "orderflow-intelligence"
version = "0.1.0"
description = "OrderFlow Theme 11 intelligence graph skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.0,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "black>=24.8.0,<25.0.0",
  "flake8>=7.1.0,<8.0.0"
]

[project.scripts]
orderflow-intelligence = "orderflow_intelligence.main:run"

[tool.black]
line-length = 100
target-version = ["py312"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
